gccida/c3/compare_from_rtx
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compare_from_rtx/src/expr.c:10360:42: error: must use 'enum' tag to refer to type 'rtx_code'
rtx  compare_from_rtx( rtx op0, rtx op1, rtx_code code, int unsignedp, machine_mode mode, rtx size) 
                                         ^
                                         enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compare_from_rtx/src/expr.c:10360:72: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  compare_from_rtx( rtx op0, rtx op1, rtx_code code, int unsignedp, machine_mode mode, rtx size) 
                                                                       ^
                                                                       enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compare_from_rtx/src/expr.c:10368:6: error: use of undeclared identifier 'QTextBlock'
if ( QTextBlock::operator<( op0, op1) ) 
     ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compare_from_rtx/src/obj/expr.o] Error 1
